hh/vDSP.h

    /*  Define types:

            vDSP_Length for numbers of elements in arrays and for indices of
            elements in arrays.  (It is also used for the base-two logarithm of
            numbers of elements, although a much smaller type is suitable for
            that.)

            vDSP_Stride for differences of indices of elements (which of course
            includes strides).
    */
    typedef unsigned long vDSP_Length;
typedef long long vDSP_Stride;
typedef long vDSP_Stride;
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = ~(A[n] ^ B[n]);
*/

// Vector fill.
extern void vDSP_vfill(const float *__A, float *__C, vDSP_Stride __IC,
                       vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vfillD(const double *__A, double *__C, vDSP_Stride __IC,
                        vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vfilli(const int *__A, int *__C, vDSP_Stride __IC,
                        vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        NLow[0]  = 0;
        NHigh[0] = 0;
        for (n = 0; n < N; ++n)
        {
            D[n] = A[n];
            if (D[n] < B[0]) { D[n] = B[0]; ++NLow[0];  }
            if (C[0] < D[n]) { D[n] = C[0]; ++NHigh[0]; }
        }
*/

// Vector clear.
extern void vDSP_vclr(float *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vclrD(double *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = 0;
*/

// Vector compress.
extern void vDSP_vcmprs(const float *__A, vDSP_Stride __IA, const float *__B,
                        vDSP_Stride __IB, float *__C, vDSP_Stride __IC,
                        vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vcmprsD(const double *__A, vDSP_Stride __IA, const double *__B,
                         vDSP_Stride __IB, double *__C, vDSP_Stride __IC,
                         vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = A[n] - trunc(A[n]);
*/

// Vector gather.
extern void vDSP_vgathr(const float *__A, const vDSP_Length *__B,
                        vDSP_Stride __IB, float *__C, vDSP_Stride __IC,
                        vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vgathrD(const double *__A, const vDSP_Length *__B,
                         vDSP_Stride __IB, double *__C, vDSP_Stride __IC,
                         vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = *A[n];
*/

// Vector generate tapered ramp.
extern void vDSP_vgen(const float *__A, const float *__B, float *__C,
                      vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vgenD(const double *__A, const double *__B, double *__C,
                       vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
        {
            if (A[n] <= B[0] || C[0] <= A[n])
                D[n] = A[n];
            else
                if (A[n] < 0)
                    D[n] = B[0];
                else
                    D[n] = C[0];
        }

    It is expected that B[0] <= 0 <= C[0].
*/

// Vector index, C[i] = A[truncate[B[i]].
extern void vDSP_vindex(const float *__A, const float *__B, vDSP_Stride __IB,
                        float *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vindexD(const double *__A, const double *__B, vDSP_Stride __IB,
                         double *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
        {
            b = max(trunc(B[n]), 1);
            a = B[n] - b;
            C[n] = (A[b-1]*(a**2-a) + A[b]*(2-2*a**2) + A[b+1]*(a**2+a))
                / 2;
        }
*/

// Vector build ramp.
extern void vDSP_vramp(const float *__A, const float *__B, float *__C,
                       vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vrampD(const double *__A, const double *__B, double *__C,
                        vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = S[0] * sum(A[j], 0 < j <= n);

    Observe that C[0] is set to 0, and A[0] is not used.
*/

// Vector reverse order, in-place.
extern void vDSP_vrvrs(float *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vrvrsD(double *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    This computes:

        for (n = 0; n < N; ++n)
            E[n] = A[n]*B[0] + C[n]*D[0];
*/

// Vector sort, in-place.
extern void vDSP_vsort(float *__C, vDSP_Length __N, int __Order)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vsortD(double *__C, vDSP_Length __N, int __Order)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  No strides are used; arrays map directly to memory.

    I contains indices into C.

    If Order is +1, I is sorted so that C[I[n]] increases, for 0 <= n < N.
    If Order is -1, I is sorted so that C[I[n]] decreases, for 0 <= n < N.

    Temporary is not used.  NULL should be passed for it.
*/

// Vector swap.
extern void vDSP_vswap(float *__A, vDSP_Stride __IA, float *__B,
                       vDSP_Stride __IB, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vswapD(double *__A, vDSP_Stride __IA, double *__B,
                        vDSP_Stride __IB, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));